# realtimeEventService

./: .env.example  .gitmodules  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
bash/: build_image.sh  generate_proto.sh
src/: main.py  settings.py
src/event/: BaseEvent.py  UserOfflineEvent.py  UserOnlineEvent.py
src/messaging/: StompSender.py
src/proto/: main.proto
src/proto/implementation/: OnlineTracker.py
src/proto/pyproto/: main_pb2.py  main_pb2.pyi  main_pb2_grpc.py
src/service/: Tracker.py
