[project]
name = "realtimeeventservice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docopt==0.6.2",
    "grpcio-tools==1.71.0",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "setuptools==79.0.1",
    "stomp-py==8.2.0",
]
